hide overflow (fixes weird white bar issue on mobile)

--- a/css/page.css
+++ b/css/page.css
@@ -2,6 +2,10 @@ body {
 	min-width: 0 !important;
 }
 
+#wrapper {
+	overflow-x: hidden;
+}
+
 .container {
 	width: 80%;
 	margin: 0 auto;
